SWM-105 refactor: service 메소드 이름 수정 및 reponse  DTO 통일성 적용